[package]
name = "equation_api"
version = "0.1.0"
authors = ["Osh <osh.pro@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
equation_generator = "0.1.2"
serde_json = "1.0"
serde = "1.0.125"